# stock_value

./: .gitignore  EXCEL_IMPROVEMENT_SPEC.md  README.md  STOCK_ANALYZER_SPEC.md  portfolio_agent_flow_20260515.html  portfolio_agent_report_20260515.html  portfolio_agent_trades_20260515.json  pyproject.toml  requirements.txt  run_ml_train_best.ps1  run_tests.ps1
.streamlit/: config.toml
backtesting/: __init__.py  backtest_ml_run_log.txt  build_yearly_top100_universe.py  checkpoint_cache.py  dynamic_portfolio_backtest.py  market_neutral_backtest.py  ml_quant.py  overlap_stats.py  performance_metrics.py  regime.py  regime_multifactor.py  run_ml_backtest.ps1  run_vector_backtest.py  sp500_changes.csv  sp500_pit_universe.py  strategy_backtest.py  strategy_modes.py  strategy_stat_tests.py  vector_engine.py  yearly_top100_universe.py
dashboard/: app.py
portfolio/: __init__.py  analyze.py  atomic_io.py  backtest.py  backtest_flow_html.py  backtest_invariants.py  backtest_viz.py  broker.py  config.frozen.example.json  config.json  config_loader.py  daily_run.py  data_gates.py  decision_schema.py  decision_thresholds.py  decision_trace.py  decisions.py  exit_policy.py  install_daily_task.ps1  market_data.py  memory_log.py  ml_gates.py  oos_validation.py  paper_oos.py  reflection.py  regime_attribution.py  risk_limits.py  risk_scaling.py  run_backtest.ps1  run_daily.ps1  run_daily_scheduled.ps1  run_paper_report.ps1  score_pt.py  setup_institutional.ps1  store.py  trailing_stop.py  universe.py  universe_meta.py  weekly_report.py
projection/: __init__.py  news_engine.py  (+5 more)
(+139 files in other folders)
